# sendpy

./: LICENSE  README.md  __init__.py  example.py  pyproject.toml  setup.py
