[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sendspy"
version = "1.0.0"
authors = [
    {name = "SendPy Developer", email = "hhvvm5@gmail.com"},
]
description = "Simple Telegram message sending library"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "requests>=2.25.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yourusername/sendpy"
Repository = "https://github.com/yourusername/sendpy.git"